fixed layout bugs

--- a/src/app/Router.module.scss
+++ b/src/app/Router.module.scss
@@ -1,7 +1,11 @@
 .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 100%;
   height: 100%;
   padding: 1.5rem 12.5rem;
-  background-color: var(--color-info-50);
 
   @media (width <= 860px) {
     padding: 1rem 1.375rem;
