--- a/src/app/styles/_boilerplate.scss
+++ b/src/app/styles/_boilerplate.scss
@@ -145,6 +145,7 @@ body {
   min-width: 360px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--color-info-50);
 }
 
 button {
